--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
